GET_FILENAME_COMPONENT(DIRNAME ${CMAKE_CURRENT_LIST_DIR} NAME)
SET(PLUGIN_NAME plugin.${DIRNAME})
SET_PROPERTY(GLOBAL APPEND PROPERTY CONVERTER_PLUGIN ${PLUGIN_NAME})

INCLUDE_DIRECTORIES(include)

SET(PLUGIN_SRC
  src/CaliceGenericConverterPlugin.cc
  )
ADD_LIBRARY(${PLUGIN_NAME} SHARED ${PLUGIN_SRC})
INSTALL(TARGETS ${PLUGIN_NAME}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )

option(BUILD_AHCAL "Compile AHCAL" OFF)
IF(BUILD_AHCAL)
  add_subdirectory(AHCAL)
ENDIF()

option(BUILD_BIFAHCAL "Compile BIFAHCAL" OFF)
IF(BUILD_BIFAHCAL)
  add_subdirectory(BIF_AHCAL)
ENDIF()

