set(name "DRSProducer")

#FIND_PACKAGE(DRS REQUIRED)

#IF(DRS_FOUND)
#MESSAGE(STATUS "FOUND DRS PATHES")
#ELSE(DRS_FOUND)
#  MESSAGE(FATAL_ERROR "Could not find DRS! Make sure to set the environment variable $DRS_PATH to the path of your pxar installation!")
#ENDIF(DRS_FOUND)

IF(NOT WIN32) 
find_package(libusb-1.0)
IF(LIBUSB_1_FOUND)
	add_definitions(-DHAVE_LIBUSB10)
	SET(USB_INCLUDE_DIRS ${LIBUSB_1_INCLUDE_DIRS})
	SET(USB_LIBRARIES ${LIBUSB_1_LIBRARIES})
	SET(USB_DEFINITIONS ${LIBUSB_1_DEFINITIONS})
	MESSAGE(STATUS "Found libusb 1.0 for drs4")	
ELSE(LIBUSB_1_FOUND)
	find_package(LIBUSB REQUIRED)
	IF(LIBUSB_FOUND)
		add_definitions(-DHAVE_LIBUSB)
		SET(USB_INCLUDE_DIRS ${LIBUSB_INCLUDE_DIRS})
		SET(USB_LIBRARIES ${LIBUSB_LIBRARIES})
		SET(USB_DEFINITIONS ${LIBUSB_1_DEFINITIONS})
		MESSAGE(STATUS "Found libusb 0.1 for drs4")	
	ELSE(LIBUSB_FOUND)
		MESSAGE(FATAL_ERROR "No libusb found!")
	ENDIF(LIBUSB_FOUND)
ENDIF(LIBUSB_1_FOUND)
ENDIF(NOT WIN32) 

SET(sourcefiles src/DRS4Producer.cxx 
DRS/src/musbstd.c
DRS/src/mxml.c
DRS/src/DRS.cpp
DRS/src/averager.cpp
DRS/src/strlcpy.c)
MESSAGE(STATUS "SOURCEFILES: '" ${sourcefiles} "'")

INCLUDE_DIRECTORIES(include DRS/include ${USB_INCLUDE_DIRS})
ADD_EXECUTABLE(${name} ${sourcefiles})

#MESSAGE(STATUS "LIBRARY: " ${DRS_LIBRARY})

MESSAGE(STATUS "ADD_EXECUTABLE " ${name} " " ${sourcefiles})

#MESSAGE(STATUS "LIBRARIES:" ${LIBUSB_1_INCLUDE_DIRS})
#MESSAGE(STATUS "LIBRARIES:" ${USB_LIBRARIES})
#TARGET_LINK_LIBRARIES(${name} EUDAQ ${EUDAQ_THREADS_LIB} ${DRS_LIBRARY})
TARGET_LINK_LIBRARIES(${name} EUDAQ ${EUDAQ_THREADS_LIB} ${USB_LIBRARIES})

INSTALL(TARGETS ${name}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
